test: fix broken test